# pierce-tapl

./: .gitignore  LICENSE  pierce-tapl.cabal
src/: Chapter5.hs
