name:                pierce-tapl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vpeurala/pierce-tapl#readme
license:             BSD3
license-file:        LICENSE
author:              Ville Peurala
maintainer:          ville.peurala@gmail.com
copyright:           2016 Ville Peurala
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       Chapter5
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable pierce-tapl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pierce-tapl
  default-language:    Haskell2010

test-suite pierce-tapl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pierce-tapl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vpeurala/pierce-tapl
